<resources>
    <string name="app_name">Free Time</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="handwork">纸艺</string>
    <string name="photo">福利</string>
    <string name="video">视频</string>
    <string name="user">我的</string>

    <string name="login">登陆</string>
    <string name="register">还没有账号吗？马上创建</string>
    <string name="re_login">已有账号？现在登陆</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">邮箱</string>
    <string name="password">密码</string>
    <string name="register_bt">注册</string>
    //popup菜单
    <string name="for_camera">拍摄一张</string>
    <string name="for_photo">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="popup_color">反馈</string>

    //关于
    <string name="email">fairyland-cat@foxmail.com</string>
    <string name="book">欢迎大家一起交流学习</string>
</resources>
